<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fontFamily="sans-serif"
    android:orientation="vertical"
    tools:context=".ui.SettingsActivity">

    <!-- Top navigation app bar -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Material toolbar for the top navigation app bar -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back"
            app:title="Settings"
            app:titleTextAppearance="@style/ToolbarTitleStyle" />

    </com.google.android.material.appbar.AppBarLayout>

    <!-- User SettingsActivity form-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Label for selecting annual semesters -->
        <TextView
            android:id="@+id/semester_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:accessibilityLiveRegion="polite"
            android:contentDescription="@string/annual_semester_selection_label"
            android:fontFamily="sans-serif"
            android:importantForAccessibility="yes"
            android:text="@string/select_annual_semesters"
            android:textSize="22sp" />

        <!-- Radio group for selecting the number of semesters -->
        <RadioGroup
            android:id="@+id/semester_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:contentDescription="@string/semester_selection_group_label"
            android:orientation="horizontal">

            <!-- Radio button for selecting 2 semesters -->
            <RadioButton
                android:id="@+id/semester_2_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:checked="true"
                android:contentDescription="@string/semester_2_selection_label"
                android:fontFamily="sans-serif"
                android:text="@string/_2_semesters"
                android:textSize="22sp" />

            <!-- Radio button for selecting 3 semesters -->
            <RadioButton
                android:id="@+id/semester_3_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/semester_3_selection_label"
                android:fontFamily="sans-serif"
                android:text="@string/_3_semesters"
                android:textSize="22sp" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:background="#E8E8E8" />

        <!-- Label for selecting visual condition -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:accessibilityLiveRegion="polite"
            android:background="@android:color/transparent"
            android:contentDescription="@string/visual_condition_selection_label"
            android:fontFamily="sans-serif"
            android:importantForAccessibility="yes"
            android:text="@string/select_visual_condition"
            android:textSize="22sp" />

        <!-- Spinner for selecting the visual condition -->
        <Spinner
            android:id="@+id/visual_condition_spinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:accessibilityLiveRegion="polite"
            android:background="@android:color/transparent"
            android:contentDescription="@string/visual_condition_spinner_label"
            android:entries="@array/visual_condition_options"
            android:fontFamily="sans-serif"
            android:importantForAccessibility="yes"
            android:textSize="22sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:background="#E8E8E8" />

        <!--Create a switch-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/toggle_light_dark_mode_description"
                android:fontFamily="sans-serif"
                android:text="@string/toggle_light_dark_mode"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="22sp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/light_mode_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="40dp"
                android:checked="true"
                android:contentDescription="@string/light_mode_switch_description"
                android:fontFamily="sans-serif"
                android:minWidth="48dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="22sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:background="#E8E8E8"
            android:contentDescription="@string/divider_description" />

        <!-- Create a save button -->
        <Button
            android:id="@+id/btnSaveChanges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:accessibilityLiveRegion="polite"
            android:contentDescription="@string/save_changes_button_description"
            android:fontFamily="sans-serif"
            android:importantForAccessibility="yes"
            android:text="@string/save_changes"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
