<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MonthViewActivity">

    <!-- Top navigation app bar -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back"
            app:title="Academic Calendar"
            app:titleTextAppearance="@style/ToolbarTitleStyle">
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/top_half_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Top section     -->
        <!-- Calendar month image -->
        <ImageView
            android:id="@+id/calendar_image"
            android:layout_width="334dp"
            android:layout_height="243dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/calendar_image_description"
            android:paddingTop="16dp"
            android:src="@drawable/_3s_september_2022"
            tools:ignore="InefficientWeight" />

        <!-- Next and previous month buttons with semester detail-->
        <LinearLayout
            android:id="@+id/month_navigation_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/prev_month_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/previous_month_description"
                android:drawableLeft="@drawable/previous"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/previous_month_text"
                android:textSize="22sp"
                tools:ignore="RtlHardcoded,RedundantDescriptionCheck" />

            <TextView
                android:id="@+id/semester_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:contentDescription="@string/semester_text_description"
                android:gravity="center"
                android:text="@string/semester_text"
                android:textSize="22sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/next_month_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/next_month_description"
                android:drawableEnd="@drawable/next"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/next_month_text"
                android:textSize="22sp"
                tools:ignore="RedundantDescriptionCheck" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:background="#E8E8E8" />
    </LinearLayout>
    <!-- Bottom section     -->
    <!-- Month descriptions -->

    <ScrollView
        android:id="@+id/bottom_half_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_half_layout"
        android:layout_marginTop="-20dp">

        <TextView
            android:id="@+id/calendar_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/calendar_details_description"
            android:padding="20dp"
            android:text="@string/calendar_details_text"
            android:textSize="22sp" />
    </ScrollView>
</RelativeLayout>